# SALT_DPO_SFT_human_feedback_edits

./: .gitignore  DPO_trainer.py  README.md  SALT_trainer.py  SFT_trainer.py  dpo.py  pyproject.toml  simulate_edits.ipynb  train_DPO.py  train_SALT.py  train_SFT.py  trainer.py  trainer_SALT.py  trainer_SFT.py
data/avs/sub_eval_w_simulated_edits/: data-00000-of-00001.arrow  dataset_info.json  state.json
sequence_alignment/: needle.py
trainer/: dpo.py  dpo_salt_sft_trainer.py  trainer.py
utils/: metrics.py
