[tool.poetry]
name = "learnfromhumanedit"
version = "0.1.0"
description = ""
authors = ["Sai Prabhakar <aps.prabhakar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
numpy = "<2"
torch = "2.1.1+cu121"
torchvision = "0.16.1+cu121"
torchaudio = "2.1.1+cu121"
transformers = "4.45.0"
trl = "0.11.0"
bitsandbytes = "^0.45.0"
peft = "0.9.0"
accelerate = "^1.2.1"
spacy = "3.7.0"
nltk = "^3.9.1"
rouge = "^1.0.1"
rouge-score = "^0.1.2"
ipdb = "^0.13.13"
minineedle = "^3.1.5"
matplotlib = "^3.10.0"
datasets = "^3.2.0"
tensorboard = "^2.18.0"
wandb = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"